# HPCSE

./: broadcast.c  main.c  reduce2all.c  scatter_v.c
MPI/: CMakeLists.txt  computation_on_matrix.c  gather.c  gather_v.c  io.c  non_blocking_averaging.c  pi_approx.c  ping_pong.c  reduce.c  scan.c  userop.c
OPENMP/: CMakeLists.txt  hello.cpp  omp_critical_example.cpp  omp_for_example.cpp  omp_sections_example.cpp
PTHREAD/: CMakeLists.txt  condition_variables_ex.c  join_example.c  mutexes_ex.c
